# reporeaper

./: .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: Cargo.toml  Dockerfile
backend/src/: agents.rs  ai_local.rs  auth.rs  db.rs  fix_worker.rs  git_ops.rs  github.rs  main.rs  pipeline.rs  startup.rs  state.rs
backend/src/fix_worker/: context.rs  memory.rs  orchestrate.rs  patch.rs  sse.rs  types.rs
backend/src/routes/: config.rs  history.rs  mod.rs  webhook.rs
frontend/: index.html  package.json  vite.config.js
frontend/src/: App.jsx  config.js
frontend/src/hooks/: useRepoReaperApp.js
frontend/src/panels/: ConfigPanel.jsx  DryRunPanel.jsx  HistoryPanel.jsx  LeaderboardPanel.jsx  PRTrackingPanel.jsx  PresetsPanel.jsx  RejectedPanel.jsx  RepoListsPanel.jsx  RunPanel.jsx  SchedulesPanel.jsx  StartupChecksPanel.jsx  TeamPanel.jsx  WebhookPanel.jsx  misc.jsx
