[package]
name = "repo-reaper"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "repo-reaper"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tower-http = { version = "0.5", features = ["cors"] }
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
async-stream = "0.3"
once_cell = "1"
patchhive-product-core = { git = "https://github.com/patchhive/patchhive-product-core.git", rev = "fb4017179d0f195f8bf30f70cc70e2f617806ebd", version = "0.1.0" }
patchhive-github-pr = { git = "https://github.com/patchhive/patchhive-github-pr.git", rev = "154d0cf92530809c23168ac7d4a88bb67729c3e2", version = "0.1.0" }
